@@ -56,6 +56,58 @@ struct APPLE_FRAMEBUFFER_INFO_PROTOCOL_ {
 #endif // APPLE_FRAMEBUFFER_INFO_H
 
 
+
+#ifndef APPLE_APFS_INFO_H
+#define APPLE_APFS_INFO_H
+
+#define APPLE_APFS_PARTITION_TYPE_GUID  \
+{ \
+  0x7C3457EF, 0x0000, 0x11AA, {0xAA, 0x11, 0x00, 0x30, 0x65, 0x43, 0xEC, 0xAC}  \
+}
+
+
+#define APPLE_APFS_CONTAINER_INFO_GUID  \
+{ \
+  0x3533CF0D, 0x685F, 0x5EBF, {0x8D, 0xC6, 0x73, 0x93, 0x48, 0x5B, 0xAF, 0xA2}  \
+}
+typedef struct {
+    UINT32     Always1;
+    EFI_GUID   Uuid;
+} APPLE_APFS_CONTAINER_INFO;
+
+
+#define APPLE_APFS_VOLUME_ROLE_SYSTEM_A    (0x00)  // Early APFS Versions ... Combined System and Data Volumes
+#define APPLE_APFS_VOLUME_ROLE_SYSTEM_B    (0x01)  // Later APFS Versions ... Separate System Volumes
+#define APPLE_APFS_VOLUME_ROLE_RECOVERY    (0x04)
+#define APPLE_APFS_VOLUME_ROLE_VM          (0x08)
+#define APPLE_APFS_VOLUME_ROLE_PREBOOT     (0x10)
+#define APPLE_APFS_VOLUME_ROLE_DATA        (0x40)
+#define APPLE_APFS_VOLUME_ROLE_UPDATE      (0xC0)
+typedef UINT32 APPLE_APFS_VOLUME_ROLE;
+
+
+#define APPLE_APFS_VOLUME_INFO_GUID  \
+{ \
+  0x900C7693, 0x8C14, 0x58BA, {0xB4, 0x4E, 0x97, 0x45, 0x15, 0xD2, 0x7C, 0x78}  \
+}
+typedef struct {
+    UINT32                 Always1;
+    EFI_GUID               Uuid;
+    APPLE_APFS_VOLUME_ROLE Role;
+} APPLE_APFS_VOLUME_INFO;
+
+
+EFI_STATUS GetApfsVolumeInfo_RP (
+    IN  EFI_HANDLE               Device,
+    OUT EFI_GUID                *ContainerGuid,
+    OUT EFI_GUID                *VolumeGuid,
+    OUT APPLE_APFS_VOLUME_ROLE  *VolumeRole
+);
+#endif // APPLE_APFS_INFO_H
+
+
+
+
 // Apple's GUID
 #define APPLE_GUID \
 { \
@@ -65,25 +117,25 @@ struct APPLE_FRAMEBUFFER_INFO_PROTOCOL_ {
 // Apple's NVRAM ACCESS FLAGS
 #define APPLE_FLAGS     EFI_VARIABLE_BOOTSERVICE_ACCESS|EFI_VARIABLE_RUNTIME_ACCESS|EFI_VARIABLE_NON_VOLATILE;
 
-// Clear CSR for Mac OS 11.00 Big Sur
-#define CSR_CLEAR_SETTING                      0x0000
-#define SIP_ENABLED_EX (CSR_CLEAR_SETTING)               // 0x000
-
 
 // These codes are returned with the csr-active-config NVRAM variable
+#define CSR_CLEAR_SETTING                      0x0000        // RefindPlus Custom Code
 #define CSR_ALLOW_UNTRUSTED_KEXTS              0x0001        // Introduced in Mac OS 10.11 El Capitan
-#define CSR_ALLOW_UNRESTRICTED_FS              0x0002        //               Ditto
-#define CSR_ALLOW_TASK_FOR_PID                 0x0004        //               Ditto
-#define CSR_ALLOW_KERNEL_DEBUGGER              0x0008        //               Ditto
-#define CSR_ALLOW_APPLE_INTERNAL               0x0010        //               Ditto
-#define CSR_ALLOW_UNRESTRICTED_DTRACE          0x0020        //               Ditto
-#define CSR_ALLOW_UNRESTRICTED_NVRAM           0x0040        //               Ditto
-#define CSR_ALLOW_DEVICE_CONFIGURATION         0x0080        //               Ditto
+#define CSR_ALLOW_UNRESTRICTED_FS              0x0002        //      Ditto
+#define CSR_ALLOW_TASK_FOR_PID                 0x0004        //      Ditto
+#define CSR_ALLOW_KERNEL_DEBUGGER              0x0008        //      Ditto
+#define CSR_ALLOW_APPLE_INTERNAL               0x0010        //      Ditto
+#define CSR_ALLOW_UNRESTRICTED_DTRACE          0x0020        //      Ditto
+#define CSR_ALLOW_UNRESTRICTED_NVRAM           0x0040        //      Ditto
+#define CSR_ALLOW_DEVICE_CONFIGURATION         0x0080        //      Ditto
 #define CSR_ALLOW_ANY_RECOVERY_OS              0x0100        // Introduced in Mac OS 10.12 Sierra
 #define CSR_ALLOW_UNAPPROVED_KEXTS             0x0200        // Introduced in Mac OS 10.13 High Sierra
 #define CSR_ALLOW_EXECUTABLE_POLICY_OVERRIDE   0x0400        // Introduced in Mac OS 10.14 Mojave
 #define CSR_ALLOW_UNAUTHENTICATED_ROOT         0x0800        // Introduced in Mac OS 11.00 Big Sur
 #define CSR_END_OF_LIST                        0xFFFFFFFF
+
+// Clear CSR for Mac OS 11.00 Big Sur (Custom)
+#define SIP_ENABLED_EX (CSR_CLEAR_SETTING)                                                 // 0x000
 
 // SIP/SSV "Enabled" Setting
 #define SIP_ENABLED  (CSR_ALLOW_APPLE_INTERNAL)                                            // 0x010
@@ -115,7 +167,6 @@ struct APPLE_FRAMEBUFFER_INFO_PROTOCOL_ {
     CSR_ALLOW_UNRESTRICTED_NVRAM | CSR_ALLOW_DEVICE_CONFIGURATION | \
     CSR_ALLOW_ANY_RECOVERY_OS | CSR_ALLOW_UNAPPROVED_KEXTS | \
     CSR_ALLOW_EXECUTABLE_POLICY_OVERRIDE | CSR_ALLOW_UNAUTHENTICATED_ROOT)                  // 0xFEF
-
 
 // Max Legal CSR "Disabled" Setting
 #define CSR_MAX_LEGAL_VALUE (CSR_ALLOW_UNTRUSTED_KEXTS | CSR_ALLOW_UNRESTRICTED_FS | \
